--- a/login.html
+++ b/login.html
@@ -86,7 +86,7 @@
         <input type="password" id="password" placeholder="Password" required>
         <button type="submit">Login</button>
       </form>
-      <p>Group 1 Computer Lab | Netflix Style</p>
+      <p>Group 1 Computer Lab 10A</p>
     </div>
   </div>
 
